Closed Bug 1904897 Opened 2 years ago Closed 13 days ago

Enabling the profiler with the JS feature leaks an 8-byte JavaScript object in `browser_test_feature_multiprocess_capture_with_signal.js`

Categories

(Core :: Gecko Profiler, defect, P3)

defect

Tracking

()

RESOLVED FIXED
155 Branch
Tracking Status
firefox155 --- fixed

People

(Reporter: aabh, Assigned: canova)

References

Details

Attachments

(1 file)

Enabling the "JS" feature in the profiler causes Firefox to leak 8 bytes of memory in the form of a JavaScript object, while running the test browser_test_feature_multiprocess_capture_with_signal.js. This causes failures when run with the leakchecker.

It's likely that this is related to Bug 1699681, but it has its own bug as the resulting leak is slightly different.

An example leakcheck output is as follows:

[task 2024-06-25T21:34:48.777Z] 21:34:48     INFO - leakcheck | Processing leak log file /tmp/tmp9s848yjx.mozrunner/runtests_leaks.log
[task 2024-06-25T21:34:48.778Z] 21:34:48     INFO - 
[task 2024-06-25T21:34:48.779Z] 21:34:48     INFO - == BloatView: ALL (cumulative) LEAK AND BLOAT STATISTICS, default process 2450
[task 2024-06-25T21:34:48.780Z] 21:34:48     INFO - 
[task 2024-06-25T21:34:48.780Z] 21:34:48     INFO -      |<----------------Class--------------->|<-----Bytes------>|<----Objects---->|
[task 2024-06-25T21:34:48.781Z] 21:34:48     INFO -      |                                      | Per-Inst   Leaked|   Total      Rem|
[task 2024-06-25T21:34:48.782Z] 21:34:48     INFO -    0 |TOTAL                                 |       43        8| 1260556        1|
[task 2024-06-25T21:34:48.783Z] 21:34:48     INFO -  553 |JS Object                             |        8        8|       1        1|
[task 2024-06-25T21:34:48.784Z] 21:34:48     INFO - 
[task 2024-06-25T21:34:48.784Z] 21:34:48     INFO - nsTraceRefcnt::DumpStatistics: 2168 entries
[task 2024-06-25T21:34:48.784Z] 21:34:48     INFO - TEST-INFO | leakcheck | default leaked 1 JS Object
[task 2024-06-25T21:34:48.784Z] 21:34:48     INFO - TEST-UNEXPECTED-FAIL | leakcheck | default 8 bytes leaked (JS Object)
[task 2024-06-25T21:34:48.784Z] 21:34:48     INFO - 

The severity field is not set for this bug.
:canova, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(canaltinova)
Severity: -- → S3
Flags: needinfo?(canaltinova)
Priority: -- → P3

I tested this locally and it looks like it's fixed after bug 1699681! Closing.

Status: NEW → RESOLVED
Closed: 14 days ago
Resolution: --- → WORKSFORME

Oh, actually let's reopen this because the test was marked to skip for debug && verify in the signal profiling test. Let's remove that case now.

Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Assignee: nobody → canaltinova
Pushed by canaltinova@gmail.com: https://github.com/mozilla-firefox/firefox/commit/d39c0f425a6e https://hg.mozilla.org/integration/autoland/rev/1a93e0b242dd Enable the signal profiling tests in debug since the JS leak is gone r=profiler-reviewers,mstange
Status: REOPENED → RESOLVED
Closed: 14 days ago13 days ago
Resolution: --- → FIXED
Target Milestone: --- → 155 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: