Bug 1904897 - Enable the signal profiling tests in debug since the JS leak is gone r=profiler-reviewers,mstange

Differential Revision: https://phabricator.services.mozilla.com/D314940